[posix] rename LinuxTimezone to PosixTimezone

--- a/xbmc/platform/posix/CMakeLists.txt
+++ b/xbmc/platform/posix/CMakeLists.txt
@@ -1,20 +1,20 @@
 set(SOURCES ConvUtils.cpp
             Filesystem.cpp
-            LinuxTimezone.cpp
             MessagePrinter.cpp
             PlatformPosix.cpp
             PosixMountProvider.cpp
             PosixResourceCounter.cpp
+            PosixTimezone.cpp
             XFileUtils.cpp
             XHandle.cpp
             XMemUtils.cpp
             XTimeUtils.cpp)
 
 set(HEADERS ConvUtils.h
-            LinuxTimezone.h
             PlatformPosix.h
             PosixMountProvider.h
             PosixResourceCounter.h
+            PosixTimezone.h
             XFileUtils.h
             XHandle.h
             XMemUtils.h
