--- a/xbmc/network/CMakeLists.txt
+++ b/xbmc/network/CMakeLists.txt
@@ -35,8 +35,7 @@ endif()
 
 if(PLIST_FOUND)
   list(APPEND SOURCES AirPlayServer.cpp)
-  list(APPEND HEADERS AirPlayServer.h
-                      DllLibPlist.h)
+  list(APPEND HEADERS AirPlayServer.h)
 endif()
 
 if(SHAIRPLAY_FOUND)
