--- a/xbmc/platform/posix/CMakeLists.txt
+++ b/xbmc/platform/posix/CMakeLists.txt
@@ -11,6 +11,7 @@ set(SOURCES ConvUtils.cpp
             XTimeUtils.cpp)
 
 set(HEADERS ConvUtils.h
+            PlatformDefs.h
             PlatformPosix.h
             PosixMountProvider.h
             PosixResourceCounter.h
