--- a/xbmc/platform/posix/CMakeLists.txt
+++ b/xbmc/platform/posix/CMakeLists.txt
@@ -18,7 +18,6 @@ set(HEADERS ConvUtils.h
             PosixResourceCounter.h
             PosixTimezone.h
             XFileUtils.h
-            XHandle.h
-            XTimeUtils.h)
+            XHandle.h)
 
 core_add_library(platform_posix)
