[depends] bump giflib to 5.2.1

--- a/tools/depends/native/giflib/Makefile
+++ b/tools/depends/native/giflib/Makefile
@@ -1,18 +1,18 @@
 include ../../Makefile.include
-DEPS= ../../Makefile.include Makefile
+DEPS= ../../Makefile.include Makefile 01-static-lib.patch
 PREFIX=$(NATIVEPREFIX)
 PLATFORM=$(NATIVEPLATFORM)
 
 # lib name, version
 LIBNAME=giflib
-VERSION=5.1.4
+VERSION=5.2.1
 SOURCE=$(LIBNAME)-$(VERSION)
-ARCHIVE=$(SOURCE).tar.bz2
+ARCHIVE=$(SOURCE).tar.gz
 
 # configuration settings
 CONFIGURE=./configure --prefix=$(PREFIX)
 
-LIBDYLIB=$(PLATFORM)/lib/.libs/libgif.a
+LIBDYLIB=$(PLATFORM)/libgif.a
 
 all: .installed-$(PLATFORM)
 
@@ -22,13 +22,14 @@ $(TARBALLS_LOCATION)/$(ARCHIVE):
 $(PLATFORM): $(TARBALLS_LOCATION)/$(ARCHIVE) $(DEPS)
 	-rm -rf $(PLATFORM); mkdir -p $(PLATFORM)
 	cd $(PLATFORM); $(ARCHIVE_TOOL) $(ARCHIVE_TOOL_FLAGS) $(TARBALLS_LOCATION)/$(ARCHIVE)
-	cd $(PLATFORM); $(CONFIGURE)
+	cd $(PLATFORM); patch -p1 -i ../01-static-lib.patch
 
 $(LIBDYLIB): $(PLATFORM)
-	$(MAKE) -C $(PLATFORM)
+	$(MAKE) -C $(PLATFORM) libgif.a CFLAGS="$(NATIVE_CFLAGS)" LDFLAGS="$(NATIVE_LDFLAGS)"
 
 .installed-$(PLATFORM): $(LIBDYLIB)
-	$(MAKE) -C $(PLATFORM) install
+	$(MAKE) -C $(PLATFORM) install-include PREFIX="$(PREFIX)"
+	$(MAKE) -C $(PLATFORM) install-lib PREFIX="$(PREFIX)"
 	touch $@
 clean:
 	$(MAKE) -C $(PLATFORM) clean
