--- a/tools/depends/native/libffi/Makefile
+++ b/tools/depends/native/libffi/Makefile
@@ -1,22 +1,19 @@
 include ../../Makefile.include
+PREFIX=$(NATIVEPREFIX)
 PLATFORM=$(NATIVEPLATFORM)
 DEPS= ../../Makefile.include Makefile
 
 # lib name, version
-LIBNAME=Python
-VERSION=3.6.4
+LIBNAME=libffi
+VERSION=3.2.1
 SOURCE=$(LIBNAME)-$(VERSION)
-ARCHIVE=$(SOURCE).tar.xz
+ARCHIVE=$(SOURCE).tar.gz
 
-CONFIGURE=./configure --prefix=$(NATIVEPREFIX) --disable-shared --disable-framework --without-ensurepip --without-pymalloc --with-system-ffi
-ifeq ($(TARGET_PLATFORM),wayland)
-  CONFIGURE += --with-system-expat
-endif
+# configuration settings
+CONFIGURE= CFLAGS="-fPIC" ./configure --prefix=$(NATIVEPREFIX) --disable-shared --disable-builddir
 
-LIBDYLIB=$(PLATFORM)/python
-ifeq ($(NATIVE_OS), osx)
-	LIBDYLIB=$(PLATFORM)/python.exe
-endif
+
+LIBDYLIB=$(PLATFORM)/.libs/$(LIBNAME).a
 
 all: .installed-$(PLATFORM)
 
@@ -24,20 +21,23 @@ $(TARBALLS_LOCATION)/$(ARCHIVE):
 	cd $(TARBALLS_LOCATION); $(RETRIEVE_TOOL) $(RETRIEVE_TOOL_FLAGS) $(BASE_URL)/$(ARCHIVE)
 
 $(PLATFORM): $(TARBALLS_LOCATION)/$(ARCHIVE) $(DEPS)
-	rm -rf $(PLATFORM)/*; mkdir -p $(PLATFORM)
+	rm -rf $(PLATFORM); mkdir -p $(PLATFORM)
 	cd $(PLATFORM); $(ARCHIVE_TOOL) $(ARCHIVE_TOOL_FLAGS) $(TARBALLS_LOCATION)/$(ARCHIVE)
 	cd $(PLATFORM); $(CONFIGURE)
 
 $(LIBDYLIB): $(PLATFORM)
-	cd $(PLATFORM); $(MAKE)
+	$(MAKE) -j 1 -C $(PLATFORM)
+	touch $@
 
 .installed-$(PLATFORM): $(LIBDYLIB)
-	cd $(PLATFORM); $(MAKE) install
-	touch $(LIBDYLIB)
+	$(MAKE) -C $(PLATFORM) install
+	mkdir -p $(NATIVEPREFIX)/include/ffi
+	cp $(NATIVEPREFIX)/lib/$(SOURCE)/include/* $(NATIVEPREFIX)/include/ffi/
 	touch $@
 
 clean:
-	rm -rf $(PLATFORM) .installed-$(PLATFORM)
+	$(MAKE) -C $(PLATFORM) clean
+	rm -f .installed-$(PLATFORM)
 
 distclean::
 	rm -rf $(PLATFORM) .installed-$(PLATFORM)
