Event server keyboard dont give normal key up and key down so dont process for long press if that is source. Also fix issue with unicode button events not being marked as coming from event server.

--- a/xbmc/platform/linux/CMakeLists.txt
+++ b/xbmc/platform/linux/CMakeLists.txt
@@ -22,11 +22,13 @@ endif()
 
 if(CORE_PLATFORM_NAME_LC STREQUAL rbpi)
   list(APPEND SOURCES RBP.cpp
-                      OMXCore.cpp)
+                      OMXCore.cpp
+                      ScreenshotSurfaceRBP.cpp)
   list(APPEND HEADERS RBP.h
                       DllBCM.h
                       DllOMX.h
-                      OMXCore.h)
+                      OMXCore.h
+                      ScreenshotSurfaceRBP.h)
 endif()
 
 core_add_library(linuxsupport)
