--- a/xbmc/addons/addoninfo/CMakeLists.txt
+++ b/xbmc/addons/addoninfo/CMakeLists.txt
@@ -1,5 +1,11 @@
-set(SOURCES AddonInfo.cpp)
+set(SOURCES AddonInfoBuilder.cpp
+            AddonExtensions.cpp
+            AddonInfo.cpp
+            AddonType.cpp)
 
-set(HEADERS AddonInfo.h)
+set(HEADERS AddonInfoBuilder.h
+            AddonExtensions.h
+            AddonInfo.h
+            AddonType.h)
 
 core_add_library(addons_addoninfo)
