[addons] changing the test system in a new way without cpluff
This rewrites existing test things in the new way and adds a test to create the CAddonInfo class.

--- a/xbmc/addons/test/CMakeLists.txt
+++ b/xbmc/addons/test/CMakeLists.txt
@@ -1,4 +1,6 @@
-set(SOURCES TestAddonDatabase.cpp
+set(SOURCES TestAddonBuilder.cpp
+            TestAddonDatabase.cpp
+            TestAddonInfoBuilder.cpp
             TestAddonVersion.cpp)
 
 core_add_test_library(addons_test)
