--- a/xbmc/addons/CMakeLists.txt
+++ b/xbmc/addons/CMakeLists.txt
@@ -47,6 +47,7 @@ set(HEADERS Addon.h
             AddonStatusHandler.h
             AddonSystemSettings.h
             AddonVersion.h
+            APIVersions.h
             AudioDecoder.h
             AudioEncoder.h
             ContextMenuAddon.h
