--- a/tools/android/packaging/Makefile.in
+++ b/tools/android/packaging/Makefile.in
@@ -31,7 +31,7 @@ ARMOVERRIDES=XBMC_OVERRIDE_HOST=arm-linux-androideabi XBMC_OVERRIDE_TOOLCHAIN=$(
 #this fixes a android ndk fuckup where the paths to
 #prebuilt stuff follow different name schemes for
 #arm and x86
-ifeq ($(findstring i686,$(CPU)),i686)
+ifeq ($(findstring x86,$(CPU)),x86)
   ARCH=x86
   CPU=x86
 endif
@@ -50,22 +50,7 @@ ifeq ($(findstring armeabi-v7a,$(CPU)),armeabi-v7a)
   STLLIB=$(TOOLCHAIN)/$(HOST)/lib/armv7-a/libc++_shared.so
 endif
 
-#older ndk x86
-GDBPATH=$(NDKROOT)/toolchains/$(ARCH)-$(GCC_VERSION)/prebuilt/gdbserver
-
-ifneq ($(shell test -f $(GDBPATH) && echo 1),1)
-#older ndk arm
-GDBPATH=$(NDKROOT)/toolchains/$(HOST)-$(GCC_VERSION)/prebuilt/gdbserver
-endif
-
-ifneq ($(shell test -f $(GDBPATH) && echo 1),1)
-#vanilla ndk >= 8
 GDBPATH=$(NDKROOT)/prebuilt/android-$(ARCH)/gdbserver/gdbserver
-endif
-
-ifeq ($(ARCH),aarch64)
-GDBPATH=$(NDKROOT)/prebuilt/android-arm64/gdbserver/gdbserver
-endif
 
 # check for java 1.8
 JAVA8=$(shell java -version 2>&1 | grep -q '1.8.[0-9]' && echo yes)
