changed: put stream details videodatabase methods in separate file

--- a/xbmc/video/database/CMakeLists.txt
+++ b/xbmc/video/database/CMakeLists.txt
@@ -9,6 +9,7 @@ set(SOURCES VideoDatabase.cpp
             VideoDatabaseSeasons.cpp
             VideoDatabaseSets.cpp
             VideoDatabaseSettings.cpp
+            VideoDatabaseStreamDetails.cpp
             VideoDatabaseTags.cpp)
 
 set(HEADERS VideoDatabase.h)
