--- a/tools/depends/native/setuptools/Makefile
+++ b/tools/depends/native/setuptools/Makefile
@@ -4,19 +4,19 @@ PLATFORM=$(NATIVEPLATFORM)
 DEPS= ../../Makefile.include Makefile
 
 # lib name, version
-LIBNAME=distribute
-VERSION=0.6.21
+LIBNAME=setuptools
+VERSION=41.0.1
 ARCHIVE=$(LIBNAME)-$(VERSION).tar.gz
 
 all: .installed-$(PLATFORM)
 
 $(TARBALLS_LOCATION)/$(ARCHIVE):
 	cd $(TARBALLS_LOCATION); $(RETRIEVE_TOOL) $(RETRIEVE_TOOL_FLAGS) $(BASE_URL)/$(ARCHIVE)
-	cd $(TARBALLS_LOCATION); chmod +x $(ARCHIVE)
 
 $(PLATFORM): $(TARBALLS_LOCATION)/$(ARCHIVE) $(DEPS)
 	-rm -rf $(PLATFORM)/*; mkdir -p $(PLATFORM)
 	cd $(PLATFORM); $(ARCHIVE_TOOL) $(ARCHIVE_TOOL_FLAGS) $(TARBALLS_LOCATION)/$(ARCHIVE)
+	cd $(PLATFORM); $(PREFIX)/bin/python bootstrap.py
 
 .installed-$(PLATFORM): $(PLATFORM)
 	cd $(PLATFORM); $(PREFIX)/bin/python setup.py install --prefix=$(PREFIX)
