[fix] return type bool for boolean python functions

--- a/xbmc/interfaces/python/PythonSwig.cpp.template
+++ b/xbmc/interfaces/python/PythonSwig.cpp.template
@@ -47,7 +47,7 @@ Helper.setup(this,classes,
     [ 'void' : 'Py_INCREF(Py_None);\n    ${result} = Py_None;',
       'long': '${result} = PyInt_FromLong(${api});',
       'unsigned long': '${result} = PyInt_FromLong(${api});',
-      'bool': '${result} = Py_BuildValue("b", ${api});',
+      'bool': '${result} = ${api} ? Py_True : Py_False;',
       'long long': '${result} = Py_BuildValue("L", ${api});',
       'int': '${result} = Py_BuildValue("i", ${api});',
       'unsigned int': '${result} = Py_BuildValue("I", ${api});',
