[ios/tvos] Implement Codesigning build arguments for darwin_embedded platforms
Add ability to supply codesigning arguments to xcode project build to populate
xcode project after generation.
Refactoring and changes to clean up darwin_embedded archsetup.cmake
Standardise PLATFORM_BUNDLE_IDENTIFIER to allow simple change to xcode project bundle
identifier

--- a/xbmc/platform/darwin/ios/Info.plist.in
+++ b/xbmc/platform/darwin/ios/Info.plist.in
@@ -251,7 +251,7 @@
 		<integer>2</integer>
 	</array>
 	<key>CFBundleIdentifier</key>
-	<string>org.xbmc.@APP_NAME_LC@-ios</string>
+	<string>@PLATFORM_BUNDLE_IDENTIFIER@</string>
 	<key>DTXcode</key>
 	<string>0730</string>
 	<key>CFBundleExecutable</key>
@@ -314,7 +314,7 @@
       <string>Picture</string>
       <key>LSItemContentTypes</key>
       <array>
-        <string>org.xbmc.kodi-ios.picture</string>
+        <string>@PLATFORM_BUNDLE_IDENTIFIER@.picture</string>
       </array>
     </dict>
     <dict>
@@ -324,7 +324,7 @@
       <string>Music</string>
       <key>LSItemContentTypes</key>
       <array>
-        <string>org.xbmc.kodi-ios.music</string>
+        <string>@PLATFORM_BUNDLE_IDENTIFIER@.music</string>
       </array>
     </dict>
     <dict>
@@ -334,7 +334,7 @@
       <string>Video</string>
       <key>LSItemContentTypes</key>
       <array>
-        <string>org.xbmc.kodi-ios.video</string>
+        <string>@PLATFORM_BUNDLE_IDENTIFIER@.video</string>
       </array>
     </dict>
     <dict>
@@ -344,7 +344,7 @@
       <string>Subtitle</string>
       <key>LSItemContentTypes</key>
       <array>
-        <string>org.xbmc.kodi-ios.subtitle</string>
+        <string>@PLATFORM_BUNDLE_IDENTIFIER@.subtitle</string>
       </array>
     </dict>
   </array>
@@ -354,7 +354,7 @@
       <key>UTTypeSize320IconFile</key>
       <string>AppIcon60x60</string>
       <key>UTTypeIdentifier</key>
-      <string>org.xbmc.kodi-ios.picture</string>
+      <string>@PLATFORM_BUNDLE_IDENTIFIER@.picture</string>
       <key>UTTypeSize64IconFile</key>
       <string>AppIcon60x60</string>
       <key>UTTypeConformsTo</key>
@@ -392,7 +392,7 @@
       <key>UTTypeSize320IconFile</key>
       <string>AppIcon60x60</string>
       <key>UTTypeIdentifier</key>
-      <string>org.xbmc.kodi-ios.music</string>
+      <string>@PLATFORM_BUNDLE_IDENTIFIER@.music</string>
       <key>UTTypeSize64IconFile</key>
       <string>AppIcon60x60</string>
       <key>UTTypeConformsTo</key>
@@ -481,7 +481,7 @@
       <key>UTTypeSize320IconFile</key>
       <string>AppIcon60x60</string>
       <key>UTTypeIdentifier</key>
-      <string>org.xbmc.kodi-ios.video</string>
+      <string>@PLATFORM_BUNDLE_IDENTIFIER@.video</string>
       <key>UTTypeSize64IconFile</key>
       <string>AppIcon60x60</string>
       <key>UTTypeConformsTo</key>
@@ -573,7 +573,7 @@
       <key>UTTypeSize320IconFile</key>
       <string>AppIcon60x60</string>
       <key>UTTypeIdentifier</key>
-      <string>org.xbmc.kodi-ios.subtitle</string>
+      <string>@PLATFORM_BUNDLE_IDENTIFIER@.subtitle</string>
       <key>UTTypeSize64IconFile</key>
       <string>AppIcon60x60</string>
       <key>UTTypeConformsTo</key>
